# rag_sys

./: .editorconfig  .env.template  .gitignore  CLAUDE.md  README.md  README.zh-TW.md  ROADMAP.md  ROADMAP2.md  ROADMAP3.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
ai-server/: Dockerfile  pyproject.toml
ai-server/app/: agent.py  auth.py  be_client.py  graph_extraction.py  main.py  models.py  prompt_loader.py  rag_client.py
ai-server/tests/: test_agent_tools.py  test_graph_extraction.py  test_main_graph_extraction.py
be-server/: BeServer.sln  Dockerfile
be-server/BeServer.Tests/: AuthControllerTests.cs  BeServer.Tests.csproj  DataIsolationTests.cs  EvaluationDatasetTests.cs  IngestionJobTests.cs  InternalRequestLogsControllerTests.cs  ModelRegistryTests.cs  NotebookAndSearchControllerTests.cs  ReindexJobTests.cs  RetrievalBenchTests.cs  (+1 more)
docs/: POSITIONING.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
rag-server/: Dockerfile  pyproject.toml
rag-server/app/: chunker.py  db.py  embedder.py  experiments.py  graph_ingest.py  json_logging.py  main.py  metrics.py  models.py  rag_config.py  vector_store.py
rag-server/app/gateway/: base.py  openai_embedding.py
rag-server/tests/: test_chunker.py  test_graph_ingest.py  test_graph_ingest_integration.py  test_graph_search_integration.py  test_internal_secret.py  test_models.py  test_vector_store.py  test_vector_store_integration.py
scripts/: arango_one_db_per_user.js
style_template/: index.html
(+135 files in other folders)
